# PQC-OP

./: .gitignore  analyze_verification.py  pyproject.toml  pyrightconfig.json  recompute_prices.py  requirements.txt  ruff.toml  run_verification.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
QQuantLib/qml4var/: architectures.py  losses.py  losses_parallel.py  myqlm_workflows.py  myqlm_workflows_parallel.py  plugins.py
benchmark/qml4var/: data_sets.py
misc/CrisTFM/: 23_OP-Cris.ipynb  functions.py
misc/notebooks/: 00_AboutTheNotebooksAndQPUs.ipynb  14_qml4var_Intro.ipynb  15_qml4var_DataSets.ipynb  16_qml4var_BuildPQC.ipynb  17_qml4var_pqc_evaluation.ipynb  18_qml4var_loss_computation.ipynb  23_qml4var_unsupervised_training_dft.ipynb  24_qml4var_unsupervised_training_dft_spsa.ipynb  25_qml4var_unsupervised_training_dft_dask_local.ipynb  26_qml4var_unsupervised_training_dft_parallel_v2.ipynb  README.md
notebooks/: 01_supervised_vs_unsupervised_qml_option_pricing.ipynb  01_unsupervised_dft.ipynb  02_supervised_vs_unsupervised_qml_option_pricing_dask.ipynb  02_unsupervised_spsa.ipynb  03_colab_gpu_smoke_test.ipynb  03_unsupervised_dask.ipynb  04_analisis_resultados.ipynb  04_colab_gpu_smoke_test.ipynb  05_colab_smoke_basic.ipynb  27_colab_gpu_smoke_test.ipynb
src/: continue_training.py  data_sets.py  finance.py  new_training.py  new_training_mse.py  run_experiments.py
src/config/: base_optimizer.json  new_optimizer.json
src/qml4var/: adam.py  data_utils.py  (+4 more)
tests/: test_qml4var.py
verification/: verify_pipeline.py
(+7 files in other folders)
